--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/*
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +11,25 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+*/
+.flex-row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.nav-list {
+  margin-right: 40px;
+  margin-left: 40px;
+  padding: 20px;
+}
+
+.header {
+  padding: 20px;
+  margin: 20px;
+  
+}
+
+.footer-icon {
+  margin: 20px;
 }
