--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,6 @@ code {
 main {
 	margin: 0 auto;
 	max-width: 90%;
-  padding:  20px;
 }
 
 
@@ -33,6 +32,7 @@ main {
   font-size: large;
   margin-left: 8%;
   margin-right: 8%;
+  
 }
 
 header {
@@ -76,6 +76,10 @@ h2 {
   font-size: 2rem;
 }
 
+h3 {
+  font-size: 1.75rem;
+}
+
 p {
   font-size: 1.1rem;
   margin-top: 0;
@@ -111,3 +115,5 @@ a {
   display: contents;
   color: black;
 }
+
+
