--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,17 @@
 /* whole app */
-html,
+/* html,
 body {
   height: 100%;
-}
+} */
 
 main {
 	margin: 0 auto;
-	max-width: 90%;
+	/* max-width: 100%; */
 }
 
 .flex-row {
   display: flex;
   flex-wrap: wrap;
-}
-
-* {
-  box-sizing: border-box;
 }
 
 h1 {
@@ -36,7 +32,7 @@ h4 {
 
 p {
   font-size: 1.1rem;
-  margin-top: 0;
+  /* margin-top: 0; */
 }
 
 a {
@@ -65,13 +61,22 @@ a {
 
 /* header component */
 header {
-  width:100%;
+  /* width:100%; */
   text-align: center;
   padding-top: 10px;
 }
 
 
 /* nav component */
+
+#nav-list {
+  padding: 20px;
+  list-style: none;
+  font-size: 1.19rem;
+  margin-left: 7.5%;
+  margin-right: 7.5%;
+}
+
 .nav-list {
   padding: 20px;
   list-style: none;
@@ -82,7 +87,6 @@ header {
 
 .navActive {
   color: gold;
-  
 }
 
 nav li {
@@ -134,12 +138,17 @@ input:focus {
 }
 
 textarea {
-	width: 1030px;
+	width: 1070px;
 	height: 120px;
 	border: 2px solid #7e7c7c;
   border-radius: 3px;
 	padding: 5px;
-  display: flexbox;
+  /* display: flexbox; */
+}
+
+textarea:focus {
+  border: 1px solid var();
+  box-shadow: 0 0 .25rem rgba(0, 0, 0, .5);
 }
 
 /* footer component */
@@ -157,24 +166,3 @@ footer {
   margin-top: 10px;
   margin-bottom: 8px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
