--- a/src/index.css
+++ b/src/index.css
@@ -111,7 +111,6 @@ nav li {
 /* no css on portfolio component */
 
 /* project component */
-
 #git-project-icon {
   margin-bottom: .2rem;
 }
@@ -266,6 +265,16 @@ footer {
     margin: 1rem;
   }
 
+  #git-repo-label {
+    font-size: .8rem;
+    text-align: center;
+    margin-left: 0.4rem;
+    margin-top: 0%; 
+  }
+  #git-project-icon {
+    height: .8rem;
+  }
+
   textarea  {
     width: 24rem;
     margin-left: 6rem;
@@ -282,6 +291,16 @@ footer {
     width: 100%;
     justify-content: center;
   } 
+
+  #git-repo-label {
+    font-size: .9rem;
+    text-align: center;
+    margin-left: 0.8rem;
+    margin-top: 0%; 
+  }
+  #git-project-icon {
+    height: 1rem;
+  }
   
   input {
     width: 10rem;
@@ -301,11 +320,22 @@ footer {
 
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
+
   header nav ul {
     margin-top: 20px;
     width: 100%;
     justify-content: center;
   } 
+
+  #git-repo-label {
+    font-size: .9rem;
+    text-align: center;
+    margin-left: 0.8rem;
+    margin-top: 0%; 
+  }
+  #git-project-icon {
+    height: 1rem;
+  }
  
   input {
     width: 8rem;
@@ -371,6 +401,18 @@ footer {
   section {
       padding: 30px 15px;
   }
+
+  #git-repo-label {
+    font-size: 1rem;
+    text-align: center;
+    margin-left: 0rem;
+    margin-top: 0%; 
+  }
+  #git-project-icon {
+    height: 1rem;
+  }
+
+
   .pdf {
     display: none;
   }
@@ -422,7 +464,7 @@ footer {
    
   }
   #nav-list {
-    padding: 8px;
+    padding: 6px;
     list-style: none;
     font-size: .75rem;
     margin: .5rem;
@@ -451,17 +493,16 @@ footer {
   }
 
   /*Project*/
- 
   #project-title {
-    font-size: .8rem;
+    font-size: 1.5rem;
   }
   #git-repo-label {
-    font-size: .7rem;
+    font-size: 1rem;
+    text-align: center;
   }
   #git-project-icon {
-    height: .7rem;
+    height: 1rem;
   }
-  
 
   /*Contact*/
   #contact-container {
@@ -526,8 +567,17 @@ footer {
   }
 
 }
+@media screen and (max-width: 490PX) {
+  #git-repo-label {
+    font-size: .85rem;
+    text-align: center;
+  }
+  #git-project-icon {
+    height: .8rem;
+  }
+}
 
-@media screen and (max-width: 380PX) {
+@media screen and (max-width: 391PX) {
   
   #nav-list {
     padding: 8px;
@@ -539,6 +589,17 @@ footer {
   h1 {
     font-size: 1rem;
     text-align: center;
+  }
+  #project-title {
+    font-size: 1rem;
+  }
+
+  #git-repo-label {
+    font-size: .85rem;
+    text-align: center;
+  }
+  #git-project-icon {
+    height: .8rem;
   }
 
   input {
@@ -608,6 +669,15 @@ footer {
     list-style: none;
     font-size: .65rem;
     margin: 0rem;
+  }
+
+
+  #git-repo-label {
+    font-size: .6rem;
+    text-align: center;
+  }
+  #git-project-icon {
+    height: .6rem;
   }
 
    input {
