--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 /* whole app */
-
 html,
 body {
   height: 100%;
@@ -7,7 +6,6 @@ body {
 }
  body {
    font-family: 'Helvetica', Arial, sans-serif;  
-
 } 
 
 .flex-row {
@@ -76,7 +74,6 @@ header {
   background-color: #d7d7d8;
 }
 
-
 /* nav component */
 #nav-list {
   padding: 8px;
@@ -139,7 +136,6 @@ nav li {
   width: 100%;
   height: 100%;
   background: rgba(0, 0 ,0, 0.6);
-  /* color: #ffff; */
   color: lightgray;
   text-shadow: 0 0 3px #50b70c, 0 0 5px #f6ff00;
   display: flex;
@@ -167,11 +163,22 @@ nav li {
   margin: .2rem;
   margin-left: .4rem;
   margin-right: .4rem;
-  font-size: small;
   /* color: gray; */
   text-shadow: 0 0 3px #50b70c, 0 0 5px #f6ff00;
   /* display: contents; */
   transform: translateY(0);
+}
+
+.project-img-overlay:hover > h3 {
+  font-size: 1.75rem;
+}
+
+.project-img-overlay:hover > p {
+  font-size: .75rem;
+}
+
+.project-img-overlay:hover > a {
+  font-size: .9rem;
 }
 
 #project-title {
@@ -330,6 +337,18 @@ footer {
     height: .8rem;
   }
 
+  .project-img-overlay:hover > h3 {
+    font-size: 1rem;
+  }
+  
+  .project-img-overlay:hover > p {
+    font-size: .6rem;
+  }
+  
+  .project-img-overlay:hover > a {
+    font-size: .8rem;
+  }
+
   textarea  {
     width: 24rem;
     margin-left: 6rem;
@@ -447,7 +466,7 @@ footer {
 }
 
 /* MEDIA QUERY FOR TABLETS AND SMALLER */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
 
   h1 {
     font-size: 1.75rem;
@@ -482,6 +501,18 @@ footer {
     height: 1rem;
   }
 
+  .project-img-overlay:hover > h3 {
+    font-size: 1.75rem;
+  }
+  
+  .project-img-overlay:hover > p {
+    font-size: 1rem;
+  }
+  
+  .project-img-overlay:hover > a {
+    font-size: 1.25rem;
+  }
+
   .pdf {
     display: none;
   }
@@ -510,13 +541,11 @@ footer {
     margin-left: 10rem;
     width: 6rem; 
   } 
-
 }
 
 
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
 @media screen and (max-width: 575PX) {
-  
   h1 {
     font-size: 1.5rem;
     text-align: center;
@@ -568,6 +597,18 @@ footer {
   }
   #git-project-icon {
     height: 1rem;
+  }
+
+  .project-img-overlay:hover > h3 {
+    font-size: 1.5rem;
+  }
+  
+  .project-img-overlay:hover > p {
+    font-size: .75rem;
+  }
+  
+  .project-img-overlay:hover > a {
+    font-size: 1rem;
   }
 
   /*Contact*/
@@ -649,6 +690,18 @@ footer {
   #git-project-icon {
     height: .8rem;
   }
+
+  .project-img-overlay:hover > h3 {
+    font-size: 1rem;
+  }
+  
+  .project-img-overlay:hover > p {
+    font-size: .6rem;
+  }
+  
+  .project-img-overlay:hover > a {
+    font-size: .7rem;
+  }
 }
 
 @media screen and (max-width: 391PX) {
@@ -679,6 +732,18 @@ footer {
   }
   #git-project-icon {
     height: .8rem;
+  }
+
+  .project-img-overlay:hover > h3 {
+    font-size: .8rem;
+  }
+  
+  .project-img-overlay:hover > p {
+    font-size: .5rem;
+  }
+  
+  .project-img-overlay:hover > a {
+    font-size: .6rem;
   }
 
   input {
@@ -769,6 +834,21 @@ footer {
   }
   #git-project-icon {
     height: .6rem;
+  }
+
+  .project-img-overlay:hover > h3 {
+    font-size: .6rem;
+    margin: .1rem;
+  }
+  
+  .project-img-overlay:hover > p {
+    font-size: .4rem;
+    margin: .1rem;
+  }
+  
+  .project-img-overlay:hover > a {
+    font-size: .4rem;
+    margin: .1rem;
   }
 
    input {
