--- a/src/index.css
+++ b/src/index.css
@@ -306,6 +306,7 @@ footer {
   margin-top: .2rem;
   margin-bottom: 0rem;
   size: 2em;
+  color: black;
 }
 
 #footer-tag-text {
@@ -521,6 +522,7 @@ footer {
   .pdf {
     display: none;
   }
+
   input {
     width: 8rem;
     margin-left: 3rem;
@@ -590,6 +592,10 @@ footer {
     padding-top: 0%;
     padding-right: 1.5rem;
     padding-left: 1.5rem;
+  }
+
+  .hover-instructions {
+    font-size: .7rem
   }
 
   /*Project*/
